--- a/proctoring/faq.html
+++ b/proctoring/faq.html
@@ -31,6 +31,14 @@
                 <li>Select 'Settings' in the drop down menu.</li>
                 <img src="elements/img2.png">
 
+                <li>Scroll down the page that opens, and select 'Advanced'</li>
+                <img src="elements/img3.png">
+
+                <li>Select 'Content settings' under 'Privacy and security'</li>
+                <img src="elements/img4.png">
+
+                <li>Select 'Content settings' under 'Privacy and security'</li>
+                <img src="elements/img5.png">
 
             </ol>
 
