Final update for today

--- a/proctoring/faq.html
+++ b/proctoring/faq.html
@@ -37,10 +37,14 @@
                 <li>Select 'Content settings' under 'Privacy and security'</li>
                 <img src="elements/img4.png">
 
-                <li>Select 'Content settings' under 'Privacy and security'</li>
+                <li>Select 'Camera' and 'Microphone' to determine if the Chrome extension has been blocked.</li>
                 <img src="elements/img5.png">
 
+                <li>Select the trashcan icon next to 'CRIS'.</li>
+                <img src="elements/img6.png">
             </ol>
+
+            <p>When the proctoring page opens on the test again, it will now ask if you wish to allow access. Remember to select 'Allow'.</p>
 
         </div>
     </div>
