accordion functionality addition

--- a/proctoring/faq.html
+++ b/proctoring/faq.html
@@ -3,15 +3,9 @@
 
 <head>
     <title>FAQ</title>
-    <style>
-        img {
-            border: 1px solid lightgray;
-        }
 
-        li {
-            margin: 15px 0 0 0;
-        }
-    </style>
+    <link href="styles.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -48,6 +42,8 @@
 
         </div>
     </div>
+
+<script src="scripts.js"></script>
 
 </body>
 
