accordion implementation works

--- a/proctoring/faq.html
+++ b/proctoring/faq.html
@@ -16,8 +16,8 @@
     <br>
 
     <div class="questions">
-        <div class="question">
-            <strong>I accidentally disallowed Chrome from accessing my Microphone and Camera, how do I reenable them?</strong>
+        <button class="accordion">I accidentally disallowed Chrome from accessing my Microphone and Camera, how do I reenable them?</button>
+        <div class="panel">
             <ol>
                 <li>Select the customise dots on the top right of the Chrome browser.</li>
                 <img src="elements/img1.png">
@@ -38,12 +38,17 @@
                 <img src="elements/img6.png">
             </ol>
 
-            <p>When the proctoring page opens on the test again, it will now ask if you wish to allow access. Remember to select 'Allow'.</p>
-
+            <p>When the proctoring page opens on the test again, it will now ask if you wish to allow access. Remember to select 'Allow'.
+            </p>
         </div>
+
+
+
+
+
     </div>
 
-<script src="scripts.js"></script>
+    <script src="scripts.js"></script>
 
 </body>
 
