font ubuntu added

--- a/proctoring/faq.html
+++ b/proctoring/faq.html
@@ -4,6 +4,7 @@
 <head>
     <title>FAQ</title>
 
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
 
 </head>
