--- a/proctoring/faq.html
+++ b/proctoring/faq.html
@@ -39,7 +39,8 @@
                 <img src="elements/img6.png">
             </ol>
 
-            <p>When the proctoring page opens on the test again, it will now ask if you wish to allow access. Remember to select 'Allow'.
+            <p>When the proctoring page opens on the test again, it will now ask if you wish to allow access. Remember to select
+                'Allow'.
             </p>
         </div>
 
